02 Dec 2008 Support for PANTITLE when console is an xterm window - Roger Bowler
24 Nov 2008 Add processor type IL for IFL on engines statement - Jan Jaeger
02 Nov 2008 Correction to dasdtab entries for 3375 and 3380 - Roger Bowler
01 Nov 2008 Fix tapedev gettapetype_bydata function for HET/AWS tapes that
            start with a tapemark -- Liam Cold [liamcold@yahoo.com] by Fish
26 Oct 2008 Store_is within CMPSC will zero the remaining bits in the working byte,
            just like other famous manufacturers will do. All former generated compressed
            code will expand correctly, don't worry!! But their can be a difference
            in the compressed output. (This is the case when bits are on, but those
            are the unused bits after the last index symbol). - Bernard van der Helm
24 Oct 2008 Fix RC file not processed nor HAO thread engaged if -d daemon mode - Fish
11 Oct 2008 Fix MSVC build failure when 'rebase' utility doesn't exist - Fish
07 Sep 2008 Fix zero ilc problem after branch trace - Greg
04 Sep 2008 Fix 64-bit length problem in cdsk_valid_trk - Tony Harminc by Greg
29 Aug 2008 Panel display extended cursor handling (Windows only) - Fish
29 Aug 2008 Fix message-keep logic (sticky/held messages) - Fish
29 Aug 2008 Fix some New Panel data input painting issues - Fish
23 Aug 2008 Implemented sticky and held messages completed - Bernard van der Helm
22 Aug 2008 Fix TOD clock race condition identified by Fred Feucht
            (fredfeucht) - by Marcin Cieslak [saper@system.pl] - Fish
21 Aug 2008 Fix i/o-interrupt-queue race condition - Fish
19 Aug 2008 Init LCS interface ASAP to fix wrong MAC being used - Fish
13 Aug 2008 Fix bad guest IA after host interrupt during branch trace - Greg
04 Aug 2008 DIAG308 function codes (still incomplete) - Roger Bowler
02 Aug 2008 Implement SCP message colors - Bernard van der Helm
29 Jul 2008 Fix buffer mgmt bug in hao_thread causing garbage - Fish